<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Login.Registro">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/rootView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="602dp"
            android:background="@drawable/vernuevoq" />

        <ImageView
            android:id="@+id/image_ariana"
            android:layout_width="414dp"
            android:layout_height="625dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="-1dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="-2dp"
            android:layout_marginBottom="-21dp"
            android:alpha="0"
            android:scaleType="centerCrop"
            android:src="@drawable/ki" />


        <Button
            android:id="@+id/btnregistro"
            android:layout_width="110dp"
            android:layout_height="37dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="263dp"
            android:layout_marginEnd="38dp"
            android:layout_marginBottom="21dp"
            android:background="@drawable/button_background2"
            android:text="Registrar"
            android:textAllCaps="false"
            android:textColor="#F3F5F7"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="377dp"
            android:layout_height="370dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="72dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="2dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/nombres"
                    android:fontFamily="@font/gitchgitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/edittelefono"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:drawablePadding="11dp"
                    android:ems="10"
                    android:hint="@string/ing"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColorHint="#FFF" />

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="188dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/telefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gitchgitch"
                    android:layout_alignStart="@+id/lnpapellidos"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_phone_android_black_24dp"
                    android:drawableLeft="@drawable/baseline_lock_white_24dp"
                    android:drawablePadding="11dp"
                    android:ems="10"
                    android:hint="@string/INGTEL"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColorHint="#FFF" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="65dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/apellidos"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/gitchgitch"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/lnpapellidos"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:drawablePadding="11dp"
                    android:ems="10"
                    android:hint="@string/INGA"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColorHint="#FFF" />

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="129dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/Correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gitchgitch"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/baseline_email_white_24dp"
                    android:drawableLeft="@drawable/baseline_email_white_24dp"
                    android:drawablePadding="11dp"
                    android:ems="10"
                    android:hint="@string/INGCOR"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColorHint="#FFF" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="-1dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/rpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/baseline_lock_white_24dp"
                    android:drawableLeft="@drawable/baseline_lock_white_24dp"
                    android:drawablePadding="11dp"
                    android:ems="10"
                    android:fontFamily="@font/gitchgitch"
                    android:hint="@string/REPCL"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColorHint="#FFF" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/baseline_lock_white_24dp"
                    android:drawableLeft="@drawable/baseline_lock_white_24dp"
                    android:drawablePadding="11dp"
                    android:fontFamily="@font/gitchgitch"
                    android:ems="10"
                    android:hint="@string/INCL"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColorHint="#FFF" />

            </LinearLayout>


        </RelativeLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="292dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="107dp"
            android:fontFamily="@font/gitchgitch"
            android:text="@string/REGIS"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="57dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="136dp"
        android:background="@drawable/ic_account_circle_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.752"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>

</LinearLayout>