<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login.ui.login.LoginActivity"
    tools:layout_editor_absoluteY="81dp">

    <RelativeLayout
        android:id="@+id/rootView"
        android:layout_width="410dp"
        android:layout_height="599dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/vernuevoq" />

    </RelativeLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="406dp"
        android:layout_height="600dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/rootView"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnregistro2"
            android:layout_width="111dp"
            android:layout_height="43dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_background2"
            android:fontFamily="@font/gitchgitch"
            android:text="@string/R"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.966" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="334dp"
            android:layout_height="131dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="148dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/username"
                android:layout_width="307dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:drawableStart="@drawable/baseline_email_white_24dp"
                android:drawableLeft="@drawable/baseline_email_white_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:fontFamily="@font/gitchgitch"
                android:hint="@string/INGCOR"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="8dp"
                android:selectAllOnFocus="true"
                android:textColorHint="#FFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="19dp"
                android:background="?android:attr/listDivider" />

            <EditText
                android:id="@+id/password"
                android:layout_width="307dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:drawableStart="@drawable/baseline_lock_white_24dp"
                android:drawableLeft="@drawable/baseline_lock_white_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:fontFamily="@font/gitchgitch"
                android:hint="@string/INCL"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="8dp"
                android:selectAllOnFocus="true"
                android:textColorHint="#FFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="19dp"
                android:background="?android:attr/listDivider" />
        </LinearLayout>

        <Button

            android:id="@+id/login"
            android:layout_width="270dp"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="240dp"
            android:background="@drawable/button_background2"
            android:enabled="true"
            android:fontFamily="@font/gitchgitch"
            android:text="@string/Lo"
            android:textColor="@color/colorWhite"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.58"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.99" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_white"
            android:clickable="true"
            app:backgroundTint="@color/colorWhite"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
            app:srcCompat="@drawable/facebook" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="68dp"
            android:layout_height="36dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="400dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/gitchgitch"
            android:text="@string/Login"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.552"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingActionButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            app:backgroundTint="@color/colorWhite"
            app:layout_constraintBottom_toTopOf="@+id/textView11"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
            app:srcCompat="@drawable/google" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="83dp"
            android:layout_height="36dp"
            android:layout_marginStart="28dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/gitchgitch"
            android:maxLines="1"
            android:padding="8dp"
            android:text="@string/facebook"
            android:textColor="#FDFDFD"
            android:textColorHint="#FFF"
            android:textSize="14sp"
            android:textStyle="bold"
            app:backgroundTint="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnregistro2" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="75dp"
            android:layout_height="37dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/gitchgitch"
            android:maxLines="1"
            android:padding="8dp"
            android:text="@string/Gmail"
            android:textColor="#FDF8F7F7"
            android:textColorHint="#FFF"
            android:textSize="14sp"
            android:textStyle="bold"
            app:backgroundTint="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="129dp"
            android:layout_height="57dp"

            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/gitchgitch"
            android:text="@string/Lo"
            android:textColor="#FAF8F8F8"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.36" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="185dp"
            android:layout_height="135dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.583"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.909">

        </android.support.constraint.ConstraintLayout>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginStart="411dp"
            android:layout_marginTop="602dp"
            android:layout_marginEnd="411dp"
            android:layout_marginBottom="24dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.69" />
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
